Dodanie stron dla graczy

--- a/awantura_o_kase/panel_admin/templates/home.html
+++ b/awantura_o_kase/panel_admin/templates/home.html
@@ -4,7 +4,7 @@
  <head> 
   <meta charset="UTF-8"> 
 
-  <title>Awantura o kase - panel admina</title> 
+  <title>Awantura o kase - panel gry</title> 
   {% load static %}
   <link rel="stylesheet" type = 'text/css' href="{% static 'style_home.css' %}"> 
   <script>
