--- a/awantura_o_kase/panel_admin/templates/login.html
+++ b/awantura_o_kase/panel_admin/templates/login.html
@@ -4,7 +4,7 @@
  <head> 
   <meta charset="UTF-8"> 
 
-  <title>CodePen - Animated Login Form using Html &amp; CSS Only</title> 
+  <title>Awantura o kasę</title> 
   {% load static %}
   <link rel="stylesheet" type = 'text/css' href="{%static 'style_login.css' %}"> 
   <script>
