Kolejna poprawa błędów

--- a/awantura_o_kase/panel_admin/templates/home.html
+++ b/awantura_o_kase/panel_admin/templates/home.html
@@ -37,7 +37,7 @@
       <form action="/login/" method="post">{% csrf_token %}
     
         <div class="inputBox"> 
-            <input type="submit" value="Sign In" onclick="window.location.href='{% url 'panel' %}'">
+            <input type="submit" value="Sign In">
         </div> 
     </form>
 
