--- a/awantura_o_kase/panel_admin/templates/login.html
+++ b/awantura_o_kase/panel_admin/templates/login.html
@@ -46,7 +46,7 @@
         </div>
     
         <div class="inputBox"> 
-            <input type="submit" value="Sign In" onclick="window.location.href='{% url 'panel' %}'">
+            <input type="submit" value="Sign In">
             {% if messages %}
             <div class="messages">
                 {% for message in messages %}
