Przycisk 'reset rundy' teraz otwiera poprawne okno

--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -183,7 +183,7 @@
 			<div class="action-container flex flex-row w-full min-h-[10%] gap-[10%] justify-center">
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold" data-modal-target="popup-modal-kara" data-modal-toggle="popup-modal-kara">Kara</button>
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black rounded-full uppercase font-bold" data-modal-target="popup-modal-1-na-1" data-modal-toggle="popup-modal-1-na-1">1 na 1</button>
-				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-rundy" data-modal-toggle="popup-modal-reset-gry">Reset rundy</button>
+				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-rundy" data-modal-toggle="popup-modal-reset-rundy">Reset rundy</button>
 				<button class="w-[12%] px-2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black reset-gry rounded-full uppercase font-bold" data-modal-target="popup-modal-reset-gry" data-modal-toggle="popup-modal-reset-gry">Reset gry(?)</button>
 			</div>
 		</div>
