--- a/awantura_o_kase/panel_admin/static/tailwind-output.css
+++ b/awantura_o_kase/panel_admin/static/tailwind-output.css
@@ -1369,6 +1369,10 @@ input:checked + .toggle-bg {
   max-width: 28rem;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1515,6 +1519,10 @@ input:checked + .toggle-bg {
   gap: 0.5rem;
 }
 
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .gap-\[10\%\] {
   gap: 10%;
 }
@@ -1584,6 +1592,10 @@ input:checked + .toggle-bg {
   overflow-x: hidden;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1641,10 +1653,6 @@ input:checked + .toggle-bg {
 
 .border-8 {
   border-width: 8px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-l-0 {
@@ -1750,6 +1758,11 @@ input:checked + .toggle-bg {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
+.bg-gray-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -1773,9 +1786,8 @@ input:checked + .toggle-bg {
   background-color: rgb(38 38 38 / 0.75);
 }
 
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 180 180 / var(--tw-bg-opacity));
+.bg-red-400\/\[0\.55\] {
+  background-color: rgb(249 128 128 / 0.55);
 }
 
 .bg-red-600 {
@@ -1806,40 +1818,6 @@ input:checked + .toggle-bg {
   background-color: rgb(114 59 19 / var(--tw-bg-opacity));
 }
 
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 82 82 / var(--tw-bg-opacity));
-}
-
-.bg-red-300\/\[0\.5\] {
-  background-color: rgb(248 180 180 / 0.5);
-}
-
-.bg-red-300\/\[0\.7\] {
-  background-color: rgb(248 180 180 / 0.7);
-}
-
-.bg-red-300\/\[0\.6\] {
-  background-color: rgb(248 180 180 / 0.6);
-}
-
-.bg-red-300\/\[0\.55\] {
-  background-color: rgb(248 180 180 / 0.55);
-}
-
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 213 213 / var(--tw-bg-opacity));
-}
-
-.bg-red-200\/\[\] {
-  background-color: rgb(251 213 213 / );
-}
-
-.bg-red-400\/\[0\.55\] {
-  background-color: rgb(249 128 128 / 0.55);
-}
-
 .p-1 {
   padding: 0.25rem;
 }
@@ -1860,16 +1838,12 @@ input:checked + .toggle-bg {
   padding: 1rem;
 }
 
-.p-\[20px\] {
-  padding: 20px;
-}
-
-.p-6 {
-  padding: 1.5rem;
-}
-
 .p-7 {
   padding: 1.75rem;
+}
+
+.p-\[20px\] {
+  padding: 20px;
 }
 
 .px-2 {
@@ -2041,6 +2015,11 @@ input:checked + .toggle-bg {
   color: rgb(28 100 242 / var(--tw-text-opacity));
 }
 
+.text-gray-300 {
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2066,6 +2045,11 @@ input:checked + .toggle-bg {
   color: rgb(101 163 13 / var(--tw-text-opacity));
 }
 
+.text-red-200 {
+  --tw-text-opacity: 1;
+  color: rgb(251 213 213 / var(--tw-text-opacity));
+}
+
 .text-rose-600 {
   --tw-text-opacity: 1;
   color: rgb(225 29 72 / var(--tw-text-opacity));
@@ -2081,34 +2065,9 @@ input:checked + .toggle-bg {
   color: rgb(114 59 19 / var(--tw-text-opacity));
 }
 
-.text-red-900 {
+.text-red-100 {
   --tw-text-opacity: 1;
-  color: rgb(119 29 29 / var(--tw-text-opacity));
-}
-
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(200 30 30 / var(--tw-text-opacity));
-}
-
-.text-red-800 {
-  --tw-text-opacity: 1;
-  color: rgb(155 28 28 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(240 82 82 / var(--tw-text-opacity));
-}
-
-.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(248 180 180 / var(--tw-text-opacity));
-}
-
-.text-red-200 {
-  --tw-text-opacity: 1;
-  color: rgb(251 213 213 / var(--tw-text-opacity));
+  color: rgb(253 232 232 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -2117,34 +2076,6 @@ input:checked + .toggle-bg {
 
 .opacity-100 {
   opacity: 1;
-}
-
-.opacity-50 {
-  opacity: 0.5;
-}
-
-.opacity-75 {
-  opacity: 0.75;
-}
-
-.opacity-\[75\] {
-  opacity: 75;
-}
-
-.opacity-\[90\] {
-  opacity: 90;
-}
-
-.opacity-\[90\%\] {
-  opacity: 90%;
-}
-
-.opacity-\[0\.9\] {
-  opacity: 0.9;
-}
-
-.opacity-\[0\.85\] {
-  opacity: 0.85;
 }
 
 .shadow {
@@ -2172,20 +2103,14 @@ input:checked + .toggle-bg {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.backdrop-blur-sm {
-  --tw-backdrop-blur: blur(4px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-blur-xl {
-  --tw-backdrop-blur: blur(24px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -2279,7 +2204,8 @@ section .main-container
 }
 
 .srodki span,
-.pula > span {
+.pula > span
+{
   background: none;
   background-color: transparent!important;
   font-family: 'LCDDot', 'Quicksand', 'sans-serif';
@@ -2294,11 +2220,13 @@ section .main-container
   /*padding-right: 30px;*/
 }
 
-input[type="text"].kasa {
+input[type="text"].kasa,
+div#popup-modal-kara span
+{
   /* Move text down by 2px; adjust as necessary */
   /*color: purple!important;*/
   /*padding-top: 5px;*/
-  font-family: 'LCDDot', 'Quicksand', 'sans-serif';
+  font-family: 'LCDDot', 'Quicksand', 'sans-serif'!important;
 }
 
 .kasa-buttons, .kasa-buttons span{
@@ -2621,6 +2549,10 @@ section .main-container .content h1
   background-color: rgb(163 163 163 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-red-300\/\[0\.55\]:hover {
+  background-color: rgb(248 180 180 / 0.55);
+}
+
 .hover\:bg-red-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(155 28 28 / var(--tw-bg-opacity));
@@ -2629,18 +2561,6 @@ section .main-container .content h1
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-red-200\/\[\]:hover {
-  background-color: rgb(251 213 213 / );
-}
-
-.hover\:bg-red-200\/\[0\.55\]:hover {
-  background-color: rgb(251 213 213 / 0.55);
-}
-
-.hover\:bg-red-300\/\[0\.55\]:hover {
-  background-color: rgb(248 180 180 / 0.55);
 }
 
 .hover\:text-blue-600:hover {
@@ -2661,31 +2581,6 @@ section .main-container .content h1
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-200:hover {
-  --tw-text-opacity: 1;
-  color: rgb(251 213 213 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(248 180 180 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-500:hover {
-  --tw-text-opacity: 1;
-  color: rgb(240 82 82 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-400:hover {
-  --tw-text-opacity: 1;
-  color: rgb(249 128 128 / var(--tw-text-opacity));
-}
-
-.hover\:text-red-800:hover {
-  --tw-text-opacity: 1;
-  color: rgb(155 28 28 / var(--tw-text-opacity));
 }
 
 .focus\:z-10:focus {
@@ -2744,6 +2639,53 @@ section .main-container .content h1
   background-color: rgb(115 115 115 / var(--tw-bg-opacity));
 }
 
+.peer:checked ~ .peer-checked\:bg-\[rgb\(3\2c 44\2c 29\)\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(3 44 29 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-\[rgb\(38\2c 13\2c 39\)\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(38 13 39 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-\[rgb\(8\2c 26\2c 77\)\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(8 26 77 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-yellow-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(114 59 19 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.peer:checked ~ .peer-checked\:ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.peer:checked ~ .peer-checked\:ring-gray-300 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
+}
+
+.peer:checked ~ .peer-checked\:after\:translate-x-full::after {
+  content: var(--tw-content);
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.peer:focus ~ .peer-focus\:outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
 .dark\:border-blue-500:is(.dark *) {
   --tw-border-opacity: 1;
   border-color: rgb(63 131 248 / var(--tw-border-opacity));
@@ -2789,10 +2731,6 @@ section .main-container .content h1
 
 .dark\:bg-gray-900\/80:is(.dark *) {
   background-color: rgb(17 24 39 / 0.8);
-}
-
-.dark\:bg-gray-700\/\[\.06\]:is(.dark *) {
-  background-color: rgb(55 65 81 / .06);
 }
 
 .dark\:text-blue-500:is(.dark *) {
