--- a/awantura_o_kase/panel_admin/static/tailwind-output.css
+++ b/awantura_o_kase/panel_admin/static/tailwind-output.css
@@ -1111,6 +1111,22 @@ input:checked + .toggle-bg {
   top: 0px !important;
 }
 
+.\!top-1 {
+  top: 0.25rem !important;
+}
+
+.\!top-2 {
+  top: 0.5rem !important;
+}
+
+.\!top-3 {
+  top: 0.75rem !important;
+}
+
+.\!top-5 {
+  top: 1.25rem !important;
+}
+
 .bottom-0 {
   bottom: 0px;
 }
@@ -1141,6 +1157,26 @@ input:checked + .toggle-bg {
 
 .top-3 {
   top: 0.75rem;
+}
+
+.top-5 {
+  top: 1.25rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.top-1 {
+  top: 0.25rem;
+}
+
+.top-\[5px\] {
+  top: 5px;
+}
+
+.left-\[2px\] {
+  left: 2px;
 }
 
 .z-10 {
@@ -1199,6 +1235,10 @@ input:checked + .toggle-bg {
 
 .ml-\[12\%\] {
   margin-left: 12%;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .ms-3 {
@@ -1293,6 +1333,10 @@ input:checked + .toggle-bg {
   height: 55%;
 }
 
+.h-\[70px\] {
+  height: 70px;
+}
+
 .h-\[calc\(100\%-1rem\)\] {
   height: calc(100% - 1rem);
 }
@@ -1309,8 +1353,8 @@ input:checked + .toggle-bg {
   min-height: 10%;
 }
 
-.min-h-\[12\%\] {
-  min-height: 12%;
+.min-h-\[100\%\] {
+  min-height: 100%;
 }
 
 .min-h-\[30\%\] {
@@ -1353,16 +1397,17 @@ input:checked + .toggle-bg {
   width: 200px;
 }
 
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
 .w-full {
   width: 100%;
 }
 
 .min-w-0 {
   min-width: 0px;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
 }
 
 .max-w-md {
@@ -1387,6 +1432,14 @@ input:checked + .toggle-bg {
 
 .flex-\[3\] {
   flex: 3;
+}
+
+.flex-\[5\] {
+  flex: 5;
+}
+
+.flex-\[7\] {
+  flex: 7;
 }
 
 .flex-\[8\] {
@@ -1851,6 +1904,11 @@ input:checked + .toggle-bg {
   padding-right: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -2045,9 +2103,9 @@ input:checked + .toggle-bg {
   color: rgb(101 163 13 / var(--tw-text-opacity));
 }
 
-.text-red-200 {
+.text-red-100 {
   --tw-text-opacity: 1;
-  color: rgb(251 213 213 / var(--tw-text-opacity));
+  color: rgb(253 232 232 / var(--tw-text-opacity));
 }
 
 .text-rose-600 {
@@ -2063,11 +2121,6 @@ input:checked + .toggle-bg {
 .text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(114 59 19 / var(--tw-text-opacity));
-}
-
-.text-red-100 {
-  --tw-text-opacity: 1;
-  color: rgb(253 232 232 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -2105,12 +2158,6 @@ input:checked + .toggle-bg {
 
 .backdrop-blur-md {
   --tw-backdrop-blur: blur(12px);
-  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
-}
-
-.backdrop-blur-sm {
-  --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -2221,7 +2268,8 @@ section .main-container
 }
 
 input[type="text"].kasa,
-div#popup-modal-kara span
+div#popup-modal-kara span,
+.awantura-font
 {
   /* Move text down by 2px; adjust as necessary */
   /*color: purple!important;*/
