--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -31,7 +31,7 @@
 				</div>
 				<form method = "post" action = "{% url 'gra' %}" class="flex-[1] flex">{% csrf_token %}
 					<select class="flex-[1] ml-[12%] flex items-center justify-center text-3xl text-black pl-5 bg-neutral-300 border-0 rounded-full" name="kategoria" id="kategoria" onchange = "this.form.submit()">
-						<option class="hover:bg-neutral-400" value="" disabled selected {%if not kategoria %} selected {% endif %}>Kategoria</option>
+						<option class="hover:bg-neutral-400" value="" disabled selected {%if not kategoria %} selected {% endif %}>Wybierz kategorię</option>
 						<option class="hover:bg-neutral-400" value="kategoria-1" {%if kategoria == 'kategoria-1' %} selected {% endif %}>Kategoria #1</option>
 						<option class="hover:bg-neutral-400" value="kategoria-2" {%if kategoria == 'kategoria-2' %} selected {% endif %}>Kategoria #2</option>
 						<option class="focus:bg-neutral-400" value="kategoria-3" {%if kategoria == 'kategoria-3' %} selected {% endif %}>Kategoria #3</option>
@@ -154,28 +154,59 @@
 			
 
 			<!-- Pula -->
-			<div class="pula-koniec flex flex-row w-1/2 min-h-[12%] bg-neutral-800/75 border-4 border-neutral-900 rounded-r-2xl overflow-hidden divide-x-4 divide-neutral-900">
-				<div class="pula w-full flex-[8] flex justify-center items-center text-4xl">
-					<span>{{pula}}</span>
+			<div class="flex w-full h-[70px] justify-center">
+			
+				<div class="ml-auto pula-koniec flex flex-row w-1/2 min-h-[100%] bg-neutral-800/75 border-4 border-neutral-900 rounded-r-2xl overflow-hidden divide-x-4 divide-neutral-900">
+					<div class="relative pula w-full flex-[8] flex justify-center items-center text-4xl">
+						<span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs text-center text-gray-500 awantura-font">Pula pytania</span>
+						<span class="!top-3">{{pula}}</span>
+					</div>
+					<form method = "post" action = "{% url 'gra' %}" class="w-full flex-[3] h-full">{% csrf_token %}
+						<button type = "submit" name = "koniec-licytacji" value = "koniec-licytacji" class="w-full h-full flex-[3] bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black text-lg font-medium border-l-0">Koniec<br>licytacji</button>
+					</form>
 				</div>
-				<form method = "post" action = "{% url 'gra' %}" class="w-full flex-[3] h-full">{% csrf_token %}
-					<button type = "submit" name = "koniec-licytacji" value = "koniec-licytacji" class="w-full h-full flex-[3] bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black text-lg font-medium border-l-0">Koniec<br>licytacji</button>
-				</form>
+				<div id="popup-modal-czas" class="ml-auto min-h-[100%] justify-center items-center w-fit bg-neutral-800/75 border-4 border-neutral-900">
+					<div class="w-full max-w-xl h-full">
+						<div class="shadow h-full items-center px-2 flex text-5xl awantura-font">
+							<span class="awantura-font relative top-[5px] left-[2px]">00:59</span>
+						</div>
+					</div>
+				</div> 
 			</div>
+
+			
 
 			<!-- Pytanie i odpowiedz(i)-->
 			<div class="pytanie-odpowiedz w-full flex flex-row rounded-r-2xl h-[30%] overflow-hidden bg-neutral-800/75 border-4 border-neutral-900 divide-x-4 divide-neutral-900">
-				<div class="flex-[8] overflow-auto p-3 min-h-full text-lg">
-					<span>{{tresc_pytania}}</span>
+				<div class="flex-[7] relative overflow-auto p-3 min-h-full text-lg">
+					<span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Pytanie</span>
+					<span class="!top-2 relative">{{tresc_pytania}}</span>
 				</div>
-				<div class="flex-[3] overflow-auto p-3 min-h-full text-lg">
-					<span>{{odpowiedz}}</span>
+				<div class="flex-[5] min-h-full text-lg flex divide-x-4 divide-neutral-900">
+					<div class="relative flex-1 px-3 overflow-auto">
+						<span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Odpowiedz</span>
+						<span class="!top-5 relative">{{odpowiedz}}</span>
+					</div>
+					<div class="relative flex-1 px-3 overflow-auto">
+						<span class="!absolute !top-1 !left-0 !right-0 m-auto text-xs awantura-font text-center text-gray-500">Podpowiedzi</span>
+						<span class="!top-5 relative">TRESC PODPOWIEDZI podmień to pls :3 hihi</span>
+					</div>
+					
 				</div>
-				<form method = "post" action = "{% url 'gra' %}" class="flex-[2] flex flex-col overflow-hidden divide-y-2 divide-neutral-900">{% csrf_token %}
-					<button type = "submit" name = "dobra_odpowiedz" value = "dobra_odpowiedz" class = "w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-lime-600 font-bold odp-dobra">Dobra odp</button>
-					<button type = "submit" name = "zla_odpowiedz" value = "zla_odpowiedz" class="w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-rose-600 font-bold odp-zla">Zla odp</button>
-					<button class="w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-amber-600 font-bold odp-podpowiedz">Podpowiedź</button>
-				</form>
+				<div class="flex-[3] flex overflow-hidden divide-y-2 divide-neutral-900 gap-1">
+					<div class="w-1/2 flex flex-col gap-1">
+						<form method = "post" action = "{% url 'gra' %}" class="h-1/2">
+							{% csrf_token %}
+							<button type = "submit" name = "wlacz_czas" value = "wlacz_czas" class="w-full h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-blue-600 font-bold odp-podpowiedz">Włącz CZAS</button>
+						</form>
+						<button data-modal-target="popup-modal-podpowiedz" data-modal-toggle="popup-modal-podpowiedz" class="w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-amber-600 font-bold odp-podpowiedz">Kup PODPOWIEDŹ</button>
+					</div>
+					<form method = "post" action = "{% url 'gra' %}" class="w-1/2 flex flex-col gap-1 border-none">
+						{% csrf_token %}
+						<button type = "submit" name = "dobra_odpowiedz" value = "dobra_odpowiedz" class = "w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-lime-600 font-bold odp-dobra">DOBRA odp</button>
+						<button type = "submit" name = "zla_odpowiedz" value = "zla_odpowiedz" class="w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-rose-600 font-bold odp-zla">ZŁA odp</button>
+					</form>
+				</div>
 			</div>
 
 			<!-- Dodatkowe przyciski -->
@@ -189,6 +220,58 @@
 	</section>
 	
 	<!-- Modale -->
+	<div id="popup-modal-podpowiedz" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+		<div class="relative p-4 w-full max-w-xl max-h-full">
+			<div class="relative rounded-lg shadow bg-gray-700">
+				<button type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal-podpowiedz">
+					<svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+					</svg>
+					<span class="sr-only">Close modal</span>
+				</button>
+				<div class="p-4 md:p-5 text-center">
+					<h3 class="mb-5 text-lg font-normal text-gray-300">KARA - wybierz drużynę i podaj kwotę</h3>
+					<div class="flex w-full gap-5">
+						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+							<input type="radio" name="inline-radio-group" id="kara-niebiescy" value="" class="sr-only peer">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(8,26,77)]             rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(8,35,112)] button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">niebiescy</span>
+								<span class="pt-5 m-auto">{{pula_niebiescy}}</span>
+							</div>
+						</label>
+						<label class="inline-flex cursor-pointer basis-0 grow-[5] rounded">
+							<input type="radio" name="inline-radio-group" id="kara-zieloni" value="" class="sr-only peer">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(3,44,29)] 			rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(2,65,43)]  button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">zieloni</span>
+								<span class="pt-5 m-auto">{{pula_zieloni}}</span>
+							</div>
+						</label>
+						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+							<input type="radio" name="inline-radio-group" id="kara-zolci" value="" class="sr-only peer">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-yellow-800               rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-yellow-500 button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">zolci</span>
+								<span class="pt-5 m-auto">{{pula_zolci}}</span>
+							</div>
+						</label>
+						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
+							<input type="radio" name="inline-radio-group" id="kara-mistrzowie" value="" class="sr-only peer">
+							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(38,13,39)]            rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(54,41,66)] button">
+								<span class="!absolute !top-0 !left-0 !right-0 m-auto text-xs text-center text-gray-500 pt-1">mistrzowie</span>
+								<span class="pt-5 m-auto">{{pula_mistrzowie}}</span>
+							</div>
+						</label>
+					</div>
+					<input type="number" name = "add-kara-amount" id = "add-kara-amount" class="text-gray-500">
+					<form method = "post" action = "{% url 'gra' %}">{% csrf_token %}
+						<button type = "submit" name = "kara" value = "kara" data-modal-hide="popup-modal-podpowiedz" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
+							Aha, spoko
+						</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div> 
+
 	<div id="popup-modal-kara" tabindex="-1" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
 		<div class="relative p-4 w-full max-w-xl max-h-full">
 			<div class="relative rounded-lg shadow bg-gray-700">
@@ -373,7 +456,40 @@
 			{% endif %}
 		{% endfor %}
 	{% endif %} 
-
+	<script>
+        // Function to update the countdown timer
+        function updateTimer() {
+            var hours = parseInt(document.getElementById('countdown').textContent.split(':')[0]);
+            var minutes = parseInt(document.getElementById('countdown').textContent.split(':')[1]);
+            var seconds = parseInt(document.getElementById('countdown').textContent.split(':')[2]);
+ 
+            if (seconds > 0) {
+                seconds--;
+            } else {
+                if (minutes > 0) {
+                    minutes--;
+                    seconds = 59;
+                } else {
+                    if (hours > 0) {
+                        hours--;
+                        minutes = 59;
+                        seconds = 59;
+                    } else {
+                        // Timer has reached zero, you can handle this case as needed
+                    }
+                }
+            }
+ 
+            // Update the timer display
+            document.getElementById('countdown').textContent =
+                (hours < 10 ? '0' : '') + hours + ' : ' +
+                (minutes < 10 ? '0' : '') + minutes + ' : ' +
+                (seconds < 10 ? '0' : '') + seconds;
+        }
+ 
+        // Update the timer every second
+        setInterval(updateTimer, 1000);
+    </script>
 </body>
 
 </html>
