--- a/awantura_o_kase/panel_admin/static/admin_panel_style.css
+++ b/awantura_o_kase/panel_admin/static/admin_panel_style.css
@@ -202,6 +202,10 @@ input[type="text"].kasa {
   box-shadow: rgba(53, 52, 4, 0.3) 0 -25px 18px -14px inset;
 }
 
+.odp-czas {
+  box-shadow: rgba(13, 65, 99, 0.3) 0 -25px 18px -14px inset;
+}
+
 .type-hardcoded {  }
 .type-input {  }
 .type-input {  }
