--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -165,11 +165,12 @@
 						<button type = "submit" name = "koniec-licytacji" value = "koniec-licytacji" class="w-full h-full flex-[3] bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-black text-lg font-medium border-l-0">Koniec<br>licytacji</button>
 					</form>
 				</div>
-				<div id="popup-modal-czas" class="ml-auto min-h-[100%] justify-center items-center w-fit bg-neutral-800/75 border-4 border-neutral-900">
-					<div class="w-full max-w-xl h-full">
+				<div class="ml-auto min-h-[100%] justify-center items-center w-fit bg-neutral-800/75 border-4 border-neutral-900 rounded-r-2xl object-contain">
+					<div class="w-full max-w-xl h-full flex divide-x-4 divide-neutral-900">
 						<div class="shadow h-full items-center px-2 flex text-5xl awantura-font">
-							<span class="awantura-font relative top-[5px] left-[2px]">{{minuty|default:"00"}}:{{sekundy|default:"00"}}</span>
+							<span id="popup-modal-czas" class="awantura-font relative top-[5px] left-[2px]">{{minuty|default:"0"}}:{{sekundy|default:"00"}}</span>
 						</div>
+						<button type = "submit" name = "stop_czas" value = "stop_czas" class="px-2 w-full h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-red-600 font-bold odp-zla rounded-r-2xl">STOP</button>
 					</div>
 				</div> 
 			</div>
@@ -197,7 +198,7 @@
 					<div class="w-1/2 flex flex-col gap-1">
 						<form method = "post" action = "{% url 'gra' %}" class="h-1/2">
 							{% csrf_token %}
-							<button type = "submit" name = "wlacz_czas" value = "wlacz_czas" class="w-full h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-blue-600 font-bold odp-podpowiedz">Włącz CZAS</button>
+							<button type = "submit" name = "wlacz_czas" value = "wlacz_czas" class="w-full h-full bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-blue-600 font-bold odp-czas">Włącz CZAS</button>
 						</form>
 						<button data-modal-target="popup-modal-podpowiedz" data-modal-toggle="popup-modal-podpowiedz" class="w-full h-1/2 bg-neutral-300 hover:bg-neutral-400 active:bg-neutral-500 text-amber-600 font-bold odp-podpowiedz">Kup PODPOWIEDŹ</button>
 					</div>
@@ -471,14 +472,14 @@
 					seconds--;
 				} else {
 					if (minutes > 0) {
-						minutes--;
+						minutes = 0;
 						seconds = 59;
 					} else {
 					}
 				}
 	
 				timerElement.textContent =
-					(minutes < 10 ? '0' : '') + minutes + ':' +
+					minutes + ':' +
 					(seconds < 10 ? '0' : '') + seconds;
 			}
 	
