Male poprawki w HTMLu

--- a/awantura_o_kase/panel_admin/static/admin_panel_style.css
+++ b/awantura_o_kase/panel_admin/static/admin_panel_style.css
@@ -64,7 +64,8 @@ section .main-container
 }
 
 .srodki span,
-.pula > span
+.pula > span,
+.awantura-font-tweaked
 {
   background: none;
   background-color: transparent!important;
