Mala poprawka malych poprawek w HTMLu

--- a/awantura_o_kase/panel_admin/static/admin_panel_style.css
+++ b/awantura_o_kase/panel_admin/static/admin_panel_style.css
@@ -64,8 +64,7 @@ section .main-container
 }
 
 .srodki span,
-.pula > span,
-.awantura-font-tweaked
+.pula > span
 {
   background: none;
   background-color: transparent!important;
