--- a/awantura_o_kase/panel_admin/static/tailwind-output.css
+++ b/awantura_o_kase/panel_admin/static/tailwind-output.css
@@ -1399,6 +1399,26 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-\[7\] {
+  width: 7;
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
 .min-w-0 {
   min-width: 0px;
 }
@@ -1407,12 +1427,12 @@ input:checked + .toggle-bg {
   max-width: 28rem;
 }
 
-.max-w-sm {
-  max-width: 24rem;
-}
-
 .max-w-xl {
   max-width: 36rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -1868,6 +1888,11 @@ input:checked + .toggle-bg {
   background-color: rgb(114 59 19 / var(--tw-bg-opacity));
 }
 
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 .p-1 {
   padding: 0.25rem;
 }
@@ -2253,8 +2278,7 @@ section .main-container
 }
 
 .srodki span,
-.pula > span,
-.awantura-font-tweaked
+.pula > span
 {
   background: none;
   background-color: transparent!important;
