--- a/awantura_o_kase/panel_admin/templates/admin_panel.html
+++ b/awantura_o_kase/panel_admin/templates/admin_panel.html
@@ -289,10 +289,11 @@
 				</button>
 				<div class="p-4 md:p-5 text-center">
 					<h3 class="mb-5 text-lg font-normal text-gray-300">KARA - wybierz drużynę i podaj kwotę</h3>
-					<div class="flex w-full">
-						<form method="post" action="{% url 'gra' %}" class="flex w-full gap-5 flex-col items-center">
+					
+						<form method="post" action="{% url 'gra' %}" class="flex w-full flex-col gap-5 items-center">
+							<div class="flex w-full gap-5">
 						{% csrf_token %}
-						<div class="flex w-full gap-5">
+						
 						<label class="inline-flex cursor-pointer basis-0 grow-[5]">
 							<input type="radio" name="kara-druzyna" id="kara-niebiescy" value="niebiescy" class="sr-only peer">
 							<div class="peer peer-focus:outline-none peer-checked:ring-4 peer-checked:ring-gray-300 peer peer-checked:after:translate-x-full peer-checked:text-gray-500 peer-checked:bg-[rgb(8,26,77)] rounded relative h-full flex items-center justify-start text-2xl basis-0 grow-[5] bg-[rgb(8,35,112)] button">
@@ -321,14 +322,15 @@
 								<span class="pt-5 m-auto">{{pula_mistrzowie}}</span>
 							</div>
 						</label>
-						</div>
-						<div class="flex flex-col w-1/2 items-center">
-							<input type="number" name="add-kara-amount" id="add-kara-amount" class="max-w-sm text-gray-500 my-5 awantura-font text-center text-3xl">
+						
+					</div>
+						<div class="flex flex-col w-1/2 items-center gap-5">
+							<input type="number" name="add-kara-amount" id="add-kara-amount" class="w-full max-w-md text-gray-500 awantura-font text-center text-3xl">
 							<button type="submit" name="kara" value="kara" data-modal-hide="popup-modal-kara" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
-								KARAAAAA >:( grrr
+									KARAAAAA >:( grrr
 							</button>
 						</div>
-						
+					</div>
 					</form>
 				</div>
 			</div>
